--- a/week4_cluster.ipynb
+++ b/week4_cluster.ipynb
@@ -1091,7 +1091,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.cluster.hierarchy import linkage, dendrogram\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# generate the linkage matrix using ward clustering pre-computed distances\n",
+    "Z = linkage(X, method='ward', metric='euclidean')"
+   ]
   }
  ],
  "metadata": {
