--- a/week4_cluster.ipynb
+++ b/week4_cluster.ipynb
@@ -1707,6 +1707,504 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['clusters'] = clusters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>ReleaseDate</th>\n",
+       "      <th>VideoReleaseDate</th>\n",
+       "      <th>IMDB</th>\n",
+       "      <th>Unknown</th>\n",
+       "      <th>Action</th>\n",
+       "      <th>Adventure</th>\n",
+       "      <th>Animation</th>\n",
+       "      <th>Childrens</th>\n",
+       "      <th>...</th>\n",
+       "      <th>FilmNoir</th>\n",
+       "      <th>Horror</th>\n",
+       "      <th>Musical</th>\n",
+       "      <th>Mystery</th>\n",
+       "      <th>Romance</th>\n",
+       "      <th>SciFi</th>\n",
+       "      <th>Thriller</th>\n",
+       "      <th>War</th>\n",
+       "      <th>Western</th>\n",
+       "      <th>clusters</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>256</th>\n",
+       "      <td>257</td>\n",
+       "      <td>Men in Black (1997)</td>\n",
+       "      <td>04-Jul-1997</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://us.imdb.com/M/title-exact?Men+in+Black+...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ID                Title  ReleaseDate  VideoReleaseDate  \\\n",
+       "256  257  Men in Black (1997)  04-Jul-1997               NaN   \n",
+       "\n",
+       "                                                  IMDB  Unknown  Action  \\\n",
+       "256  http://us.imdb.com/M/title-exact?Men+in+Black+...        0       1   \n",
+       "\n",
+       "     Adventure  Animation  Childrens  ...  FilmNoir  Horror  Musical  Mystery  \\\n",
+       "256          1          0          0  ...         0       0        0        0   \n",
+       "\n",
+       "     Romance  SciFi  Thriller  War  Western  clusters  \n",
+       "256        0      1         0    0        0         1  \n",
+       "\n",
+       "[1 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = df[df['Title'] == 'Men in Black (1997)']\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>ReleaseDate</th>\n",
+       "      <th>VideoReleaseDate</th>\n",
+       "      <th>IMDB</th>\n",
+       "      <th>Unknown</th>\n",
+       "      <th>Action</th>\n",
+       "      <th>Adventure</th>\n",
+       "      <th>Animation</th>\n",
+       "      <th>Childrens</th>\n",
+       "      <th>...</th>\n",
+       "      <th>FilmNoir</th>\n",
+       "      <th>Horror</th>\n",
+       "      <th>Musical</th>\n",
+       "      <th>Mystery</th>\n",
+       "      <th>Romance</th>\n",
+       "      <th>SciFi</th>\n",
+       "      <th>Thriller</th>\n",
+       "      <th>War</th>\n",
+       "      <th>Western</th>\n",
+       "      <th>clusters</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>GoldenEye (1995)</td>\n",
+       "      <td>01-Jan-1995</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://us.imdb.com/M/title-exact?GoldenEye%20(...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Get Shorty (1995)</td>\n",
+       "      <td>01-Jan-1995</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://us.imdb.com/M/title-exact?Get%20Shorty%...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Twelve Monkeys (1995)</td>\n",
+       "      <td>01-Jan-1995</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://us.imdb.com/M/title-exact?Twelve%20Monk...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>27</td>\n",
+       "      <td>Bad Boys (1995)</td>\n",
+       "      <td>01-Jan-1995</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://us.imdb.com/M/title-exact?Bad%20Boys%20...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>28</td>\n",
+       "      <td>Apollo 13 (1995)</td>\n",
+       "      <td>01-Jan-1995</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://us.imdb.com/M/title-exact?Apollo%2013%2...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1596</th>\n",
+       "      <td>1597</td>\n",
+       "      <td>Romper Stomper (1992)</td>\n",
+       "      <td>01-Jan-1992</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://us.imdb.com/M/title-exact?Romper%20Stom...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1612</th>\n",
+       "      <td>1613</td>\n",
+       "      <td>Tokyo Fist (1995)</td>\n",
+       "      <td>11-Feb-1998</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://us.imdb.com/M/title-exact?Tokyo+Fist+(1...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1645</th>\n",
+       "      <td>1646</td>\n",
+       "      <td>Men With Guns (1997)</td>\n",
+       "      <td>06-Mar-1998</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://us.imdb.com/Title?Men+with+Guns+(1997/I)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1656</th>\n",
+       "      <td>1657</td>\n",
+       "      <td>Target (1995)</td>\n",
+       "      <td>28-Feb-1996</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://us.imdb.com/M/title-exact?Target%20(1995)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1672</th>\n",
+       "      <td>1673</td>\n",
+       "      <td>Mirage (1995)</td>\n",
+       "      <td>01-Jan-1995</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://us.imdb.com/M/title-exact?Mirage%20(1995)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>232 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        ID                  Title  ReleaseDate  VideoReleaseDate  \\\n",
+       "1        2       GoldenEye (1995)  01-Jan-1995               NaN   \n",
+       "3        4      Get Shorty (1995)  01-Jan-1995               NaN   \n",
+       "6        7  Twelve Monkeys (1995)  01-Jan-1995               NaN   \n",
+       "26      27        Bad Boys (1995)  01-Jan-1995               NaN   \n",
+       "27      28       Apollo 13 (1995)  01-Jan-1995               NaN   \n",
+       "...    ...                    ...          ...               ...   \n",
+       "1596  1597  Romper Stomper (1992)  01-Jan-1992               NaN   \n",
+       "1612  1613      Tokyo Fist (1995)  11-Feb-1998               NaN   \n",
+       "1645  1646   Men With Guns (1997)  06-Mar-1998               NaN   \n",
+       "1656  1657          Target (1995)  28-Feb-1996               NaN   \n",
+       "1672  1673          Mirage (1995)  01-Jan-1995               NaN   \n",
+       "\n",
+       "                                                   IMDB  Unknown  Action  \\\n",
+       "1     http://us.imdb.com/M/title-exact?GoldenEye%20(...        0       1   \n",
+       "3     http://us.imdb.com/M/title-exact?Get%20Shorty%...        0       1   \n",
+       "6     http://us.imdb.com/M/title-exact?Twelve%20Monk...        0       0   \n",
+       "26    http://us.imdb.com/M/title-exact?Bad%20Boys%20...        0       1   \n",
+       "27    http://us.imdb.com/M/title-exact?Apollo%2013%2...        0       1   \n",
+       "...                                                 ...      ...     ...   \n",
+       "1596  http://us.imdb.com/M/title-exact?Romper%20Stom...        0       1   \n",
+       "1612  http://us.imdb.com/M/title-exact?Tokyo+Fist+(1...        0       1   \n",
+       "1645    http://us.imdb.com/Title?Men+with+Guns+(1997/I)        0       1   \n",
+       "1656   http://us.imdb.com/M/title-exact?Target%20(1995)        0       1   \n",
+       "1672   http://us.imdb.com/M/title-exact?Mirage%20(1995)        0       1   \n",
+       "\n",
+       "      Adventure  Animation  Childrens  ...  FilmNoir  Horror  Musical  \\\n",
+       "1             1          0          0  ...         0       0        0   \n",
+       "3             0          0          0  ...         0       0        0   \n",
+       "6             0          0          0  ...         0       0        0   \n",
+       "26            0          0          0  ...         0       0        0   \n",
+       "27            0          0          0  ...         0       0        0   \n",
+       "...         ...        ...        ...  ...       ...     ...      ...   \n",
+       "1596          0          0          0  ...         0       0        0   \n",
+       "1612          0          0          0  ...         0       0        0   \n",
+       "1645          0          0          0  ...         0       0        0   \n",
+       "1656          0          0          0  ...         0       0        0   \n",
+       "1672          0          0          0  ...         0       0        0   \n",
+       "\n",
+       "      Mystery  Romance  SciFi  Thriller  War  Western  clusters  \n",
+       "1           0        0      0         1    0        0         1  \n",
+       "3           0        0      0         0    0        0         1  \n",
+       "6           0        0      1         0    0        0         1  \n",
+       "26          0        0      0         0    0        0         1  \n",
+       "27          0        0      0         1    0        0         1  \n",
+       "...       ...      ...    ...       ...  ...      ...       ...  \n",
+       "1596        0        0      0         0    0        0         1  \n",
+       "1612        0        0      0         0    0        0         1  \n",
+       "1645        0        0      0         0    0        0         1  \n",
+       "1656        0        0      0         0    0        0         1  \n",
+       "1672        0        0      0         1    0        0         1  \n",
+       "\n",
+       "[232 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['clusters'] == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
