--- a/week4_cluster.ipynb
+++ b/week4_cluster.ipynb
@@ -1821,7 +1821,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "256    1\n",
+       "Name: clusters, dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.clusters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2194,13 +2215,13 @@
        "[232 rows x 25 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['clusters'] == 1]"
+    "df[df['clusters'] == m.clusters.values[0]]"
    ]
   },
   {
